# fastapi-deploy

./: .gitignore  pyproject.toml
.github/workflows/: cd.yml  ci.yml
docker/compose/: docker-compose.dev.yaml  docker-compose.yaml
docker/worker/: Dockerfile.dockerignore
scripts/: build-run.sh
scripts/compose/: production.sh
shared/: __init__.py  settings.py
web/: main.py
web/core/: alembic.py  database.py  logger.py
web/models/: __init__.py  task.py
web/tests/: conftest.py  test_main.py
worker/: __init__.py  tasks.py
