[tool.poetry]
name = "fastapi-deploy"
version = "0.1.0"
description = ""
authors = ["hyoseok0604 <janghs0604@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.5.2"
pydantic-settings = "^2.1.0"
psycopg = {extras = ["binary"], version = "^3.1.14"}
celery = "^5.3.6"
sqlalchemy = "^2.0.23"

[tool.poetry.group.web.dependencies]
uvicorn = "^0.24.0.post1"
fastapi = {extras = ["all"], version = "^0.104.1"}

[tool.poetry.group.test.dependencies]
ruff = "^0.1.7"
pyright = "^1.1.339"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C4",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP",  # pyupgrade
]